--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <h1 class="btn heading">Object Detection</h1>
 
     <h3 id = "status" class="btn"></h3>
+    <h3 id="numobjects"class="btn"></h3>
+    <button onclick = "start()" class="btn" id="start_mod">Start</button>
 
   </center>
 
