--- a/fruits.html
+++ b/fruits.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>This House is a Circus</title>
+	<title>Kismet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -14,16 +14,15 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body background="2550351.jpg">
-
-    <h1 class="btn heading">Object Detector Thing</h1>
+<body background="background.jpg">
 <center>
-    <a class= "anchor" href="fruits.html">Kitchen</a>
-    <a class= "anchor" href=""></a>
-    <a class= "anchor" href=""></a>
-    <a class= "anchor" href=""></a>
-  </center>
+    <h1 class="btn heading">Kitchen</h1>
 
+    <h3 id = "status" class="btn"></h3>
+    <h3 id = "objects" class="btn">there are 5 objects in this image, cocossd has identified 1</h3>
+
+
+</center>
 </body>
 
 </html>
